--- a/Frontend/capstone-app/src/App.css
+++ b/Frontend/capstone-app/src/App.css
@@ -1,3 +1,17 @@
 .debug {
   border: 2px dashed red;
 }
+
+body {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+body.light {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+body.dark {
+  background-color: #333333;
+  color: #ffffff;
+}
