--- a/Frontend/capstone-app/src/components/Button/Button.css
+++ b/Frontend/capstone-app/src/components/Button/Button.css
@@ -1,8 +1,8 @@
 .button {
     width: 90px;
     height: 50px;
-    border-radius: 10px;
     border: none;
+    margin: 10px;
     font-weight: 700;
     font-size: 15px;
     cursor: pointer;
@@ -16,5 +16,6 @@
 
 .button-dark {
     background-color: #333;
+    margin: 10px;
     color: whitesmoke;
 }
