--- a/Frontend/capstone-app/src/components/Dark/Dark.css
+++ b/Frontend/capstone-app/src/components/Dark/Dark.css
@@ -1,60 +1,70 @@
+/* Dark.css */
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 50px;
-    height: 28px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: whitesmoke;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 20px;
-    width: 20px;
-    left: 4px;
-    bottom: 4px;
-    background-color: #333;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: rgb(107, 109, 109);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px rgb(39, 67, 70);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(22px);
-    -ms-transform: translateX(22px);
-    transform: translateX(22px);
-  }
-  
-  .slider {
-    border-radius:0px;
-  }
-  
-  .slider:before {
-    border-radius: 10%;
-  }
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 28px;
+  margin-right: 10px; /* Add some space between the switch and the label */
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: whitesmoke;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #333;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: rgb(107, 109, 109);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px rgb(39, 67, 70);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(22px);
+  -ms-transform: translateX(22px);
+  transform: translateX(22px);
+}
+
+.slider {
+  border-radius: 0px;
+}
+
+.slider:before {
+  border-radius: 10%;
+}
+
+/* New styles for the toggle container */
+.toggle-container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Space between the switch and the label */
+  color: whitesmoke; /* Ensure the label color matches the navbar text color */
+}
