--- a/Frontend/capstone-app/src/App.css
+++ b/Frontend/capstone-app/src/App.css
@@ -1,22 +1,35 @@
+/* Default styles for mobile */
+
 .debug {
   border: 2px dashed red;
 }
 
 body {
   transition: background-color 0.3s, color 0.3s;
+  min-height: 100vh;
+  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
 }
 
 body.light {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #fff4ec;
+  color: #3D405B;
 }
 
 body.dark {
-  background-color: #333333;
-  color: #ffffff;
+  background-color: #3D405B;
+  color: #fff4ec;
 }
 
-/* Default styles for mobile */
+footer.dark {
+  color: #3D405B
+}
+
 .container {
   width: 100%;
   padding: 10px;
@@ -29,6 +42,23 @@ body.dark {
 .main-content {
   display: block;
 }
+
+footer {
+  background-color: #81B29A;
+  padding: 1rem;
+  text-align: center;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+}
+
+
+/* @media (orientation: landscape) {
+  footer {
+  position: none;
+  bottom: none;
+  }
+} */
 
 /* Styles for tablets */
 @media (min-width: 600px) {
@@ -51,5 +81,12 @@ body.dark {
 
   .header, .footer {
     text-align: left;
+  }
+
+  footer {
+    margin-top: auto;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
   }
 }
