--- a/Frontend/capstone-app/src/components/NavBar/NavBar.css
+++ b/Frontend/capstone-app/src/components/NavBar/NavBar.css
@@ -1,10 +1,14 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    background-color: #333;
-    color: whitesmoke;
-    padding: 2rem;
+    /* display: flex;
+    justify-content: space-between; */
+    background-color: #81B29A;
+    /* color: #F4F1DE; */
+    padding: 1rem;
+    font-size: 12px;
+}
 
+.navbar li {
+    list-style: none;
 }
 
 .navbar-appname {
@@ -12,20 +16,20 @@
     font-weight: 700;
 }
 
-.nav-link-container{
-    display: flex;
-    justify-content: space-around;
+.nav-link-container {
+    /* display: flex;
+    justify-content: space-around; */
     width: 40%;
     list-style: none;
 }
 
 .nav-link-container li {
     padding-bottom: 5px;
-    border-bottom: 1px solid whitesmoke;
+    border-bottom: 1px solid #FFF4EC;
 }
 
 .nav-link-container li:hover {
-    color: tomato;
+    color: #E07A5F;
 }
 
 .navbar-profile-signout {
@@ -40,11 +44,11 @@
     justify-content: center;
     width: 50px;
     height: 50px;
-    border: 2px solid whitesmoke;
+    border: 8px solid #FFF4EC;
     border-radius: 50%;
     text-align: center;
     font-size: 50px;
     font-weight: 700;
-    background-color: whitesmoke;
-    color: #333;
+    background-color: #FFF4EC;
+    color: #3D405B;
 }
