--- a/Frontend/capstone-app/src/components/Dark/Dark.css
+++ b/Frontend/capstone-app/src/components/Dark/Dark.css
@@ -17,6 +17,7 @@
 /* slider */
 .slider {
   position: absolute;
+  margin: 5px
   cursor: pointer;
   top: 0;
   left: 0;
@@ -65,6 +66,7 @@ input:checked + .slider:before {
 .toggle-container {
   display: flex;
   align-items: center;
+  margin-top: 15px;
   gap: 10px; /* Space between the switch and the label */
   color: #3D405B; /* Ensure the label color matches the navbar text color */
 }
