--- a/Frontend/capstone-app/src/containers/Profile/Profile.css
+++ b/Frontend/capstone-app/src/containers/Profile/Profile.css
@@ -1,29 +1,46 @@
 .profile-container {
-  width: 50%; /* Consistent with .login-signup-container */
-  border: 1px solid #3333339d;
-  padding: 2rem;
-  box-shadow: 2px 2px 20px #333;
-  margin-bottom: 30px;
+  /* Consistent with .login-signup-container */
+  /* border: 1px solid #3333339d; 
+  box-shadow: 2px 2px 20px #333;  */
+  /* width: 70%;
+  
+  margin-bottom: 30px;*/
+  margin: 30px auto;
+  padding: 2rem auto;
 }
 
 .profile-container h2 {
   font-size: 30px;
-  border-bottom: 2px solid #333;
-  padding-bottom: 10px;
+  border-bottom: 1px solid #333;
+  padding-bottom: 30px;
   text-align: center;
+  margin-bottom: 60px;
 }
+
+.profile-container form.common-form {
+   border: none;
+   border-radius: 10px;
+   box-shadow: 2px 4px 10px #33333363;
+    width: auto;
+    padding-top: 40px;
+    margin: auto 20px;
+  }
+
+.profile-container form.common-form label {
+    text-align: start;
+  }
 
 .common-form {
   display: flex;
   flex-direction: column;
-  gap: 20px; /* Consistent with .common-form */
+  gap: 10px; /* Consistent with .common-form */
 }
 
 .common-form div {
   display: flex;
   justify-content: space-between;
-  padding: 0 5rem;
-  font-size: 20px;
+  padding: 0 2rem;
+  font-size: 16px;
 }
 
 .common-form div input {
@@ -53,4 +70,20 @@
   color: red;
   text-align: center;
   margin-bottom: 20px; /* Added margin for better spacing */
+}
+
+@media (min-width: 640px) {
+  .profile-container form.common-form {
+    display: block;
+    margin: 0 auto;
+    width: 500px;
+  }
+
+  .profile-container form.common-form input {
+    margin-bottom: 10px;
+  }
+
+  .profile-container h2 {
+    border-bottom: none;
+  }
 }
